cluster/apps/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: dns
  labels:
    app.kubernetes.io/name: adguard
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: adguard
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
